--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,106 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: 3DGS Diet
+excerpt: "Memory optimization for 3D Gaussian Splatting.<br/><img src='/images/3dgs_arch.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+<br>
+
+<div style="text-align: center;">
+    <iframe src="https://deep-daiv-computer-vision.github.io/3DGS_DIET/" width="800" height="400" 
+            style="display: block; margin: auto; border: none;"></iframe>
+</div>
+
+
+<p style="color: gray; font-size: 0.8em;">
+    Detailed information about the project can be found in the 
+    <a href="https://deep-daiv-computer-vision.github.io/3DGS_DIET/" target="_blank" style="color: gray; text-decoration: underline;">
+        project page
+    </a> above!
+</p>
+
+<br>
+
+<h2>Project Overview</h2>
+
+<p><a href="https://www.notion.so/3DGS-Diet-18cb0c1a844f8013aeedcbee87ad2113?pvs=21"><strong>🥗 3DGS Diet</strong></a></p>
+
+
+<p><strong style="color: IndianRed;">3D Gaussian Splatting memory optimization</strong> project was conducted.</p>
+<p>DBSCAN Clustering was applied to reduce the number of Gaussians.</p>
+<p>Training progress was monitored using wandb, and rendering results were visualized.</p>
+
+<p align="center">
+    <img src="/images/wandb.png" alt="Self-driving Project" width="600">
+</p>
+
+<h2>Result</h2>
+
+<p>The experiment results show that rendering performance (SSIM, PSNR, LPIPS) remains largely unchanged, while the <strong style="color: IndianRed;">number of Gaussians decreased by approximately 200,000</strong>.</p>
+
+<table>
+    <tr>
+        <th>Model Application Point</th>
+        <th>Densification Stop Point</th>
+        <th>SSIM</th>
+        <th>PSNR</th>
+        <th>LPIPS</th>
+        <th># Gaussian</th>
+    </tr>
+    <tr>
+        <td>3DGS</td>
+        <td>15,000</td>
+        <td>0.8756</td>
+        <td>24.449</td>
+        <td>0.1506</td>
+        <td>1,072,083</td>
+    </tr>
+    <tr>
+        <td>DBSCAN_14000</td>
+        <td>15,000</td>
+        <td>0.8762</td>
+        <td>24.629</td>
+        <td>0.1500</td>
+        <td>1,064,677</td>
+    </tr>
+    <tr>
+        <td>DBSCAN_24000</td>
+        <td>25,000</td>
+        <td>0.8651</td>
+        <td><strong style="color: IndianRed;">24.081</strong></td>
+        <td>0.1626</td>
+        <td><strong style="color: IndianRed;">867,287</strong></td>
+    </tr>
+</table>
+
+<h3>Rendering Visualization</h3>
+<p>Clustering applied at: 24,000 / Densification stopped at: 25,000</p>
+
+
+<p align="center">
+    <img src="/images/vis.png" alt="visualization" width="600">
+</p>
+
+
+<br>
+
+<p>After conducting this project, we further experimented and wrote the paper 
+    <a href="/publication/2024-11-01-gaussian-dbscan"><strong>Developing a Model for Improving 3D Gaussian Splatting Performance Based on DBSCAN</strong></a>.
+</p>
+
+<br>
+<br>
+<br>
+
+<a href="https://github.com/nyangche/autonomous-engine" style="text-decoration: none; display: inline-flex; align-items: center; padding: 6px 10px; background-color: #333; color: white; border-radius: 5px; font-size: 14px; font-weight: bold;">
+    <img src="https://github.com/fluidicon.png" alt="GitHub" style="width: 18px; height: 18px; margin-right: 5px; filter: invert(1);">
+    3DGS_Diet
+</a>
+
+
+
+
+
+
+
+
