--- a/_portfolio/portfolio-5.html
+++ b/_portfolio/portfolio-5.html
@@ -8,7 +8,7 @@ collection: portfolio
 
 <h2>Project Overview</h2>
 
-<iframe src="https://lacy-tick-ae2.notion.site/ebd/18db0c1a844f804b9d8dd2c369f901b4" width="100%" height="600" frameborder="0" allowfullscreen /></iframe>
+<iframe src="https://lacy-tick-ae2.notion.site/ebd/18db0c1a844f804b9d8dd2c369f901b4" width="800" height="400" frameborder="0" allowfullscreen /></iframe>
 
 <p>
     We made a <strong>speech conversion system from dialect to standard language</strong> using <strong>STT, Translation, TTS</strong>.
