--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -6,7 +6,7 @@ collection: portfolio
 
 <br>
 
-<p>This project was done in EHWA PAI lab.</p>
+<p>This project was done at EHWA PAI lab.</p>
 
 <h2>Project Overview</h2>
 
