--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -1,5 +1,5 @@
 ---
-title: Tesla 따라하기 (Recreating Tesla)
+title: Tesla 따라하기
 excerpt: "Integrating object detection, lane detection, depth estimation, and driving algorithms to develop an autonomous vehicle.<br/><img src='/images/selfdrive.png'>"
 collection: portfolio
 ---
