--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -7,14 +7,14 @@ collection: portfolio
 <br>
 
 <div style="text-align: center;">
-    <iframe src="https://nyangche.github.io/deepdrive/" width="800" height="400" 
+    <iframe src="https://chehun16.github.io/deepdrive/" width="800" height="400" 
             style="display: block; margin: auto; border: none;"></iframe>
 </div>
 
 
 <p style="color: gray; font-size: 0.8em;">
     Detailed information about the project can be found in the 
-    <a href="https://nyangche.github.io/deepdrive/" target="_blank" style="color: gray; text-decoration: underline;">
+    <a href="https://chehun16.github.io/deepdrive/" target="_blank" style="color: gray; text-decoration: underline;">
         project page
     </a> above!
 </p>
