--- a/_portfolio/portfolio-3.html
+++ b/_portfolio/portfolio-3.html
@@ -28,7 +28,7 @@ collection: portfolio
 <br>
 
 
-<a href="https://github.com/nyangche/gait-re-id" style="text-decoration: none; display: inline-flex; align-items: center; padding: 6px 10px; background-color: #333; color: white; border-radius: 5px; font-size: 14px; font-weight: bold;">
+<a href="https://github.com/chehun16/gait-re-id" style="text-decoration: none; display: inline-flex; align-items: center; padding: 6px 10px; background-color: #333; color: white; border-radius: 5px; font-size: 14px; font-weight: bold;">
     <img src="https://github.com/fluidicon.png" alt="GitHub" style="width: 18px; height: 18px; margin-right: 5px; filter: invert(1);">
     gait-re-id
 </a>
