--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -91,6 +91,7 @@ labeled objects and lanes before conducting experiments.
 
 <div style="border-left: 6px solid #007BFF; background-color: #f0f8ff; padding: 15px; margin-top: 20px; border-radius: 5px; font-size: 14px;">
     <strong>🧑‍💻 My Role:</strong> Led the development of object detection and lane detection modules, managed data collection and annotation, and implemented the integration of all perception and planning components into a unified Autonomous Engine. Additionally, I delivered a presentation of the project at the deepdaiv Open Seminar.
+    Also made the project page.😊
 </div>
 
 <br>
