--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -90,7 +90,8 @@ labeled objects and lanes before conducting experiments.
 <br>
 
 <div style="border-left: 6px solid #007BFF; background-color: #f0f8ff; padding: 15px; margin-top: 20px; border-radius: 5px; font-size: 14px;">
-    <strong>🧑‍💻 My Role:</strong> Led the development of object detection and lane detection modules, managed data collection and annotation, and implemented the integration of all perception and planning components into a unified Autonomous Engine. Additionally, I delivered a presentation of the project at the deepdaiv Open Seminar.
+    <strong>🧑‍💻 My Role:</strong> Led the development of <strong>object detection</strong> and <strong>lane detection</strong> modules, and implemented the integration of all perception-planning-control components into a unified <strong>Autonomous Engine</strong>. Also managed data collection and labeling. 
+    Additionally, I delivered a presentation of the project at the deepdaiv Open Seminar.
     Also made the project page.😊
 </div>
 
