--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -1,6 +1,6 @@
 ---
 title: Tesla 따라하기
-excerpt: "Integrating object detection, lane detection, depth estimation, and driving algorithms to develop an autonomous vehicle.<br/><img src='/images/selfdrive.png'><strong>My Role:</strong><ul><li>Object detection & lane detection implementation</li><li>Integration of all engines into the Autonomous Engine</li><li>Presentation at DeepDAIV Open Seminar</li></ul>""
+excerpt: "Integrating object detection, lane detection, depth estimation, and driving algorithms to develop an autonomous vehicle.<br/><img src='/images/selfdrive.png'>
 collection: portfolio
 ---
 
