--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -1,6 +1,6 @@
 ---
 title: Tesla 따라하기
-excerpt: "Integrating object detection, lane detection, depth estimation, and driving algorithms to develop an autonomous vehicle.<br/><img src='/images/selfdrive.png'>
+excerpt: "Integrating object detection, lane detection, depth estimation, and driving algorithms to develop an autonomous vehicle.<br/><img src='/images/selfdrive.png'>"
 collection: portfolio
 ---
 
