--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -6,6 +6,15 @@ collection: portfolio
 
 <br>
 
+<h2>Project Goal</h2>
+<p>
+    - Reduce Memory Consumption
+    - Develop a Complete End-to-End Pipeline
+    - Enable Real-Time Autonomous Control
+</p>
+
+<h2>Project Page</h2>
+
 <div style="text-align: center;">
     <iframe src="https://chehun16.github.io/deepdrive/" width="800" height="400" 
             style="display: block; margin: auto; border: none;"></iframe>
