--- a/_portfolio/portfolio-1.html
+++ b/_portfolio/portfolio-1.html
@@ -6,13 +6,11 @@ collection: portfolio
 
 
 <h2>Project Goal</h2>
-<p>
-    - Reduce Memory Consumption
-
-    - Develop a Complete End-to-End Pipeline
-    
-    - Enable Real-Time Autonomous Control
-</p>
+<ul>
+    <li>Reduce Memory Consumption</li>
+    <li>Develop a Complete End-to-End Pipeline</li>
+    <li>Enable Real-Time Autonomous Control</li>
+</ul>
 
 <h2>Project Page</h2>
 
